2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* src/theme-pixbuf.h(struct _ThemePixbuf)
	* src/sapwood-render.c(theme_pixbuf_copy, theme_pixbuf_hash,
	theme_pixbuf_equal, theme_pixbuf_set_filename,
	pixmap_cache_value_new): split (absolute) filename to dirname and
	basename, keep only canonicalized copy in memory and reconstruct the
	absolute filename when needed.  Saves roughly 21k (out of 43k) memory.
	N#16158

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/theme-pixbuf.h(struct _ThemeImage)
	* src/sapwood-rc-style.c(theme_symbols, theme_parse_image): remove
	unused 'recolorable' token

2005-05-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 1.22 ===

	* configure.in
	* NEWS: Updated

2005-05-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw(draw_extension): Stop expanding our designated
	drawing area, it's just wrong, wrong, wrong (#9727)

2005-05-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw(render_icon): Increase alpha of the background
	colored pixels used when dimming icons to avoid extreme contrast.

2005-05-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 1.20 ===

	* configure.in
	* NEWS: Updated

2005-05-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-pixmap.c(sapwood_pixmap_free): Make sure all (XChangeGC)
	operations are processed before letting the sapwood server free the
	pixmaps.  Otherwise there's a risk of getting BadPixmap errors (#11906)

2005-05-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 1.18.1 ===

	* configure.in
	* NEWS: Updated

2005-05-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c: Dim icons by drawing a simple background color
	(white) raster over the normal state icon.

	* configure.in
	* src/sapwood-server.c
	* src/Makefile.am: Remove unneeded gtk+ dependency from
	sapwood-server.

2005-04-26  Tommi Komulainen  <tommi.komulainen@nokia.com>
